src/main/java/com/example/servergraphql/spring/Errors/Errors.java
package com.example.servergraphql.spring.Errors;

import lombok.AllArgsConstructor;
import lombok.Data;

@Data
@AllArgsConstructor

public class Errors {
    private String msg;
}
